# ProtoPlanUserTask

./: .gitignore  CMakeLists.txt  CSVReader.h  CommandLineParser.cpp  CommandLineParser.h  DBInterface.cpp  DBInterface.h  GenericDictionary.h  ModelBase.cpp  ModelBase.h  PTS_DataField.cpp  PTS_DataField.h  PlannerTaskScheduleDB.sql  README.md  TaskModel.cpp  TaskModel.h  UserModel.cpp  UserModel.h  UtilityTimer.h  main.cpp
testData/: planData.txt  userData.txt
